<resources>
    <string name="app_name">IDizimo</string>
    <string name="mail">Digite seu email</string>
    <string name="password">Digite a senha</string>
    <string name="telephone">Digite o telefone</string>
    <string name="passConfirm">Confirme a senha</string>
    <string name="name">Digite seu nome</string>
    <string name="cpf">Digite seu CPF</string>


    <string name="cartao">Digite o numero do cartão</string>
    <string name="cartaodigito">Digite o digito de segurança</string>
    <string name="cartaonome">Digite o nome no cartão</string>
    <string name="cartaocpf">Digite o cpf do titular do cartão</string>
    <string name="cartaodata">Digite a data de validade</string>
    <string name="cartaobandeira">Digite a bandeira do cartão</string>
    <string name="contribuir">Digite o valor que á contribuir</string>


    <string name="validacaoTel">Telefone invalido!</string>
    <string name="validacaoEmail">Digite o valor que á contribuir</string>
    <string name="validacaoCpf">CPF invalido!</string>
    <string name="validacaoSenha">A senha precisa ter 8 digitos!</string>
    <string name="validacaoSenhaCon">A senha e a confirmação devem ser iguais</string>
    <string name="validacaoCampos">Preencha todos os campos</string>
    <string name="validacaoPoliticas">Você deve aceitar as politicas para continuar.</string>



</resources>
