<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:id="@+id/container"
                android:layout_marginTop="60dp"
                android:background="@color/backgroundGray"
                android:layout_height="match_parent">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_height="match_parent">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contribuir"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:layout_margin="5dp"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            app:cardCornerRadius="5dp"
            android:layout_margin="5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/contribuir"
                    android:inputType="number" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            >

            <EditText
                android:id="@+id/cartao_numero"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/cartao"
                android:inputType="number" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            >

            <EditText
                android:id="@+id/cartao_nome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/cartaonome" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            >

            <EditText
                android:id="@+id/cartao_codigo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/cartaodigito"
                android:inputType="number"
                android:maxLength="3" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            >

            <EditText
                android:id="@+id/data_cartao"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/cartaodata"
                android:inputType="number" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            >

        <Spinner
            android:id="@+id/cartao_bandeira"
            android:layout_width="match_parent"
            android:layout_height="40dp"
           />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            >

            <Spinner
                android:id="@+id/cartao_funcao"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/btn_historico"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/menuOrange"
                    android:text="Historico"
                    android:textColor="@color/colorPrimary" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/btn_contribuir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:text="Contribuir"
                    android:textColor="@color/colorPrimary" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
 </ScrollView>
</androidx.cardview.widget.CardView>
</RelativeLayout>