<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="6dp">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_height="match_parent">

            <TextView android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Cadastro"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <ImageView android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_document"/>
                    <EditText android:id="@+id/edt_cpf"
                        android:hint="@string/cpf"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:paddingLeft="5dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <ImageView android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_user"/>
                    <EditText android:id="@+id/edt_user"
                        android:hint="@string/name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:paddingLeft="5dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <ImageView android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_mail"/>
                    <EditText android:id="@+id/edt_mail"
                        android:hint="@string/mail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:paddingLeft="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_tell"/>
                    <EditText android:id="@+id/edt_tel"
                        android:hint="@string/telephone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:paddingLeft="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <ImageView android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_pass"/>
                    <EditText android:id="@+id/edt_password"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:paddingLeft="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">
                    <ImageView android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_pass"/>
                    <EditText android:id="@+id/edt_password_conf"
                        android:layout_width="match_parent"
                        android:hint="@string/passConfirm"
                        android:inputType="textPassword"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:paddingLeft="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/check_politicas"
                 android:layout_width="40dp"
                 android:layout_height="40dp" />
                <TextView
                    android:id="@+id/txt_politicas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Eu aceito os termos e politicas de uso"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="10dp">

                    <Button
                        android:id="@+id/btn_voltar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/menuRed"
                        android:text="Voltar"
                        android:textColor="@color/colorPrimary" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="10dp">

                    <Button
                        android:id="@+id/btn_contribuir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:text="Cadastrar"
                        android:textColor="@color/colorPrimary" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
</ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>